plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.5'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
	id "org.springdoc.openapi-gradle-plugin" version "1.5.0"
}

group = 'com.epam'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'


repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter:3.0.0'
	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.0.0'
	implementation 'org.springframework.boot:spring-boot-starter-web:3.0.0'
	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	//JUnit
	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
	//Lombok
	compileOnly 'org.projectlombok:lombok:1.18.24'
	annotationProcessor 'org.projectlombok:lombok:1.18.24'
	testCompileOnly 'org.projectlombok:lombok:1.18.24'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
	// https://mvnrepository.com/artifact/com.mysql/mysql-connector-j
	// https://mvnrepository.com/artifact/mysql/mysql-connector-java
	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.31'
	// https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-ui
	implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.13'
	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc:3.0.0'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'


}

tasks.named('test') {
	useJUnitPlatform()
}
